Invalid Payload error fix
