# src/routes/MoodRoutes.ts
@@ -5,5 +5,6 @@ const router = Router()
 
 router.post("/all", moodController.getPastMoodsList)
 router.post("/send", moodController.sendMood)
+router.get("/last/:id", moodController.getLastMood)
 
 export default router
